found bug in footer logo overlapping, and bug when browser size is very long, the background color changed to black and was expose. Got rid of this feature, not necessary. Footer logo fixed to be fluid.

--- a/base/static/base/css/base.css
+++ b/base/static/base/css/base.css
@@ -1,6 +1,6 @@
 #page-container {
   position: relative;
-  min-height: 115vh;
+  min-height: 100vh;
 }
 
 #content-wrap {
@@ -92,10 +92,6 @@ a:hover {
 .logo-nav {
 	height: 2.5rem;
 }
-.logo-footer {
-	height: 2.25rem;
-	padding-bottom: 0.5rem;
-}
 
 #main-section {
 	margin-top: 56px;
@@ -112,10 +108,6 @@ a:hover {
 	color: #959595;
 }
 
-#footer-logo {
-	font-size: 1.5em;
-}
-
 #footer-copyright {
 	font-size: 1.25em;
 }
@@ -129,24 +121,40 @@ a:hover {
 	font-size: 1.65em;
 }
 
+#footer-logo {
+	width: 15%;
+	height: auto;
+}
+
 
 @media screen and (min-width: 576px) {    }
 
 @media screen and (min-width: 768px) {
 	#main-section {margin-top: 48px;}
-	.navbar-nav {padding-top:0;padding-bottom:0;}
-	.navbar-nav > .nav-item {padding-top: 0.45rem;padding-bottom: 0.45rem;}
+	.navbar-nav {
+		padding-top:0;
+		padding-bottom:0;
+	}
+	.navbar-nav > .nav-item {
+		padding-top: 0.45rem;
+		padding-bottom: 0.45rem;
+	}
 	#mainNav .nav-link {font-size: 1.7em;}
 	.logo-nav {height: 2rem;}
-	.logo-footer {height: 1rem;padding-bottom: 0rem;}
+	#footer-logo {
+		width: 100%;
+		height: auto;
+	}
 	#content-wrap {padding-bottom: 24rem/* Footer height */;}
-	#footer {height: 24rem/* Footer height */;padding-top: 5rem;padding-bottom: 1.5rem;}
+	#footer {
+		height: 24rem/* Footer height */;
+		padding-top: 5rem;
+		padding-bottom: 1.5rem;
+	}
 
 }
 
-@media screen and (min-width: 992px) {
-	.logo-footer {height: 1.4rem;}
-}
+@media screen and (min-width: 992px) {    }
 
 @media screen and (min-width: 1200px) {    }
 
